--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,4 @@
 .header {
-  padding-left: 180px;
   width: 1006px;
 }
 
