--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,6 +1,5 @@
 .menu {
   margin-top: 32px;
-  margin-left: 180px;
   display: flex;
   justify-content: space-between;
   width: 1006px;
