--- a/styles/veiculos.css
+++ b/styles/veiculos.css
@@ -1,6 +1,5 @@
 .table_ {
   padding-top: 32px;
-  margin-left: 180px;
   font-size: 14px;
   color: #EEEEEE;
   width: 1006px;
